--- a/myhpi/templates/base.html
+++ b/myhpi/templates/base.html
@@ -53,25 +53,26 @@
                         {% bs_icon 'search' size='1.4em' %}
                     </a>
                     {% if user.is_authenticated %}
-                        <a id="nav-user-toggle" class="nav-link" href="#nav-item-container-user"
-                            onclick="toggleUserNavbar(event)"
-                            role="button"
-                            aria-expanded="false" aria-controls="nav-item-container-user">
-                            <span id="user-information-username" class="d-none" aria-hidden="true">{{ user.first_name }} {{ user.last_name }}</span>
-                            {% bs_icon 'person-circle' size='1.4em' %}
-                        </a>
-                        <a id="nav-mobile-toggle" class="nav-link d-xl-none" href="#nav-item-container-root"
-                            onclick="toggleMobileNavbar(event)"
-                            role="button"
-                            aria-expanded="false" aria-controls="nav-item-container-root">
-                            {% bs_icon 'list' size='1.4em' %}
-                        </a>
+                    <a id="nav-user-toggle" class="nav-link" href="#nav-item-container-user"
+                        onclick="toggleUserNavbar(event)"
+                        role="button"
+                        aria-expanded="false" aria-controls="nav-item-container-user">
+                        <span id="user-information-username" class="d-none" aria-hidden="true">{{ user.first_name }}
+                            {{ user.last_name }}</span>
+                        {% bs_icon 'person-circle' size='1.4em' %}
+                    </a>
+                    <a id="nav-mobile-toggle" class="nav-link d-xl-none" href="#nav-item-container-root"
+                        onclick="toggleMobileNavbar(event)"
+                        role="button"
+                        aria-expanded="false" aria-controls="nav-item-container-root">
+                        {% bs_icon 'list' size='1.4em' %}
+                    </a>
                     {% else %}
-                        <a id="nav-user-toggle" class="nav-link" class="nav-link"
-                           href="{% url 'oidc_authentication_init' %}{% if 'next' in request.GET %}?next={{ request.GET.next }}{% endif %}">
-                            {% translate "Sign in" %}
-                            {% bs_icon 'box-arrow-in-right' size='1.4em' %}
-                        </a>
+                    <a id="nav-user-toggle" class="nav-link"
+                        href="{% url 'oidc_authentication_init' %}{% if 'next' in request.GET %}?next={{ request.GET.next }}{% endif %}">
+                        {% translate "Sign in" %}
+                        {% bs_icon 'box-arrow-in-right' size='1.4em' %}
+                    </a>
                     {% endif %}
                 </div>
             </div>
@@ -89,11 +90,12 @@
                     <ul id="nav-item-container-user" class="nav-item-container collapse"
                         data-navbar-level="#nav-level-0">
                         {% if user.groups.all.exists %}
-                            <span class="nav-link pe-none" id="navbar-groups-header"><i>{% translate "Your groups:" %}</i></span>
-                            {% for group in user.groups.all %}
-                                <li class="nav-link pe-none nav-link-extra-indent">{{ group }}</li>
-                                {% endfor %}
-                            <li class="dropdown-divider"></li>
+                        <span class="nav-link pe-none"
+                            id="navbar-groups-header"><i>{% translate "Your groups:" %}</i></span>
+                        {% for group in user.groups.all %}
+                        <li class="nav-link pe-none nav-link-extra-indent">{{ group }}</li>
+                        {% endfor %}
+                        <li class="dropdown-divider"></li>
                         {% endif %}
                         <li class="nav-item">
                             <a class='nav-link' href="#" id="logout-link">{% trans "Sign out" %}</a>
@@ -146,7 +148,8 @@
                 <div class="modal-body">
                     <form id="searchForm" class="d-flex align-items-center"
                         action="{% url 'search' %}">
-                        <input id="searchInput" type="search" class="form-control me-3 " placeholder={%  translate "Search..." %}
+                        <input id="searchInput" type="search" class="form-control me-3 "
+                            placeholder={%  translate "Search..." %}
                             aria-label="Suche" name="query">
                         <button type="submit" class="btn btn-primary" aria-label={%  translate "Start search" %}
                             data-bs-toggle="tooltip" data-bs-placement="bottom"
