fix: Align navbar and page content on the right

--- a/myhpi/templates/base.html
+++ b/myhpi/templates/base.html
@@ -41,7 +41,7 @@
             <div class="page-content d-flex flex-grow-1 flex-xl-grow-0">
                 <div id="navbar-left" class="d-flex align-items-center">
                     <a class="nav-brand" href="{% pageurl root_page %}">
-                        <img src="{% static 'img/myHPI-Logo.svg' %}" class="w-100" alt={% translate "To home page" %}>
+                        <img src="{% static 'img/myHPI-Logo.svg' %}" class="h-100" alt={% translate "To home page" %}>
                     </a>
                 </div>
                 <div id="nav-level-0" class="nav-level"></div>
