fix: Display only accessible pages in navbar

--- a/myhpi/templates/base.html
+++ b/myhpi/templates/base.html
@@ -78,7 +78,7 @@
         </div>
         <div class="navbar-bottom d-flex">
             <div class="navbar-bottom-content page-content d-flex flex-column flex-xl-row flex-grow-1 flex-xl-grow-0">
-                {% build_nav_level nav_root_pages %}
+                {% build_nav_level_for root_page %}
 
                 <!-- For navbar desktop mode: Wrappers for sub level containers of root level in navbar -->
                 <div id="nav-level-1" class="nav-level"></div>
