--- a/myhpi/templates/base.html
+++ b/myhpi/templates/base.html
@@ -70,7 +70,7 @@
                     {% else %}
                     <a id="nav-user-toggle" class="nav-link"
                         href="{% url 'oidc_authentication_init' %}{% if 'next' in request.GET %}?next={{ request.GET.next }}{% endif %}">
-                        {% translate "Sign in" %}
+                        <span class="d-none d-lg-inline-block">{% translate "Sign in" %}</span>
                         {% bs_icon 'box-arrow-in-right' size='1.4em' %}
                     </a>
                     {% endif %}
