--- a/myhpi/templates/base.html
+++ b/myhpi/templates/base.html
@@ -51,32 +51,21 @@
                         {% bs_icon 'search' size='1.4em' %}
                     </a>
                     {% if user.is_authenticated %}
-                    <a id="nav-user-toggle" class="nav-link" href="#nav-item-container-user" <<<<<<< HEAD
+                    <a id="nav-user-toggle" class="nav-link" href="#nav-item-container-user"
                         onclick="toggleUserNavbar(event)" role="button" aria-expanded="false"
                         aria-controls="nav-item-container-user">
-                        =======
-                        onclick="toggleUserNavbar(event)"
-                        role="button"
-                        aria-expanded="false" aria-controls="nav-item-container-user">
-                        >>>>>>> fix: Align navbar and page content on the right
                         <span id="user-information-username" class="d-none" aria-hidden="true">{{ user.first_name }}
                             {{ user.last_name }}</span>
                         {% bs_icon 'person-circle' size='1.4em' %}
                     </a>
-                    <a id="nav-mobile-toggle" class="nav-link d-xl-none" href="#nav-item-container-root" <<<<<<< HEAD
+                    <a id="nav-mobile-toggle" class="nav-link d-xl-none" href="#nav-item-container-root"
                         onclick="toggleMobileNavbar(event)" role="button" aria-expanded="false"
                         aria-controls="nav-item-container-root">
                         {% bs_icon 'list' size='1.4em' %}
                     </a>
                     {% else %}
-                    <a id="nav-user-toggle" class="nav-link" class="nav-link"=======onclick="toggleMobileNavbar(event)"
-                        role="button" aria-expanded="false" aria-controls="nav-item-container-root">
-                        {% bs_icon 'list' size='1.4em' %}
-                    </a>
-                    {% else %}
-                    <a id="nav-user-toggle" class="nav-link">>>>>>> fix: Align navbar and page content on the right
-                        href="{% url 'oidc_authentication_init' %}{% if 'next' in request.GET %}?next={{
-                        request.GET.next }}{% endif %}">
+                    <a id="nav-user-toggle" class="nav-link"
+                        href="{% url 'oidc_authentication_init' %}{% if 'next' in request.GET %}?next={{ request.GET.next }}{% endif %}">
                         {% translate "Sign in" %}
                         {% bs_icon 'box-arrow-in-right' size='1.4em' %}
                     </a>
@@ -97,24 +86,19 @@
                     <ul id="nav-item-container-user" class="nav-item-container collapse"
                         data-navbar-level="#nav-level-0">
                         {% if user.groups.all.exists %}
-                        <<<<<<< HEAD <span class="nav-link pe-none" id="navbar-groups-header"><i>{% translate "Your
-                                groups:"
+                        <span class="nav-link pe-none" id="navbar-groups-header"><i>{% translate "Your groups:"
                                 %}</i></span>
-                            =======
-                            <span class="nav-link pe-none" id="navbar-groups-header"><i>{% translate "Your groups:"
-                                    %}</i></span>
-                            >>>>>>> fix: Align navbar and page content on the right
-                            {% for group in user.groups.all %}
-                            <li class="nav-link pe-none nav-link-extra-indent">{{ group }}</li>
-                            {% endfor %}
-                            <li class="dropdown-divider"></li>
-                            {% endif %}
-                            <li class="nav-item">
-                                <a class='nav-link' href="#" id="logout-link">{% trans "Sign out" %}</a>
-                                <form action="{% url 'oidc_logout' %}" method="post" id="logout-form">
-                                    {% csrf_token %}
-                                </form>
-                            </li>
+                        {% for group in user.groups.all %}
+                        <li class="nav-link pe-none nav-link-extra-indent">{{ group }}</li>
+                        {% endfor %}
+                        <li class="dropdown-divider"></li>
+                        {% endif %}
+                        <li class="nav-item">
+                            <a class='nav-link' href="#" id="logout-link">{% trans "Sign out" %}</a>
+                            <form action="{% url 'oidc_logout' %}" method="post" id="logout-form">
+                                {% csrf_token %}
+                            </form>
+                        </li>
                     </ul>
                 </div>
             </div>
