--- a/myhpi/core/templates/core/information_page.html
+++ b/myhpi/core/templates/core/information_page.html
@@ -1,9 +1,17 @@
 {% extends "base.html" %}
 {% load core_extras %}
+{% load bootstrap_icons %}
 
 {% block content %}
 {% with page.body|markdown as parsed_md %}
-<div class="row flex-column-reverse flex-lg-row">
+<div class="row flex-lg-row">
+    <a id="side-panel-toggle" href="#toc" class="d-grid d-lg-none">
+        <button type="button" class="btn btn-light mb-3" aria-label="Jump to Table of Contents">
+            {% bs_icon 'list-ol' size='1.3rem' %}
+            Table of Contents
+        </button>
+    </a>
+
     <div class="col-lg-9">
         <h1 class="page-title">
             <span class="underline">
@@ -12,31 +20,34 @@
         </h1>
         {{ parsed_md.0 }}
     </div>
+
     <div class="col-lg-3">
         <div class="side-panel-container">
             <aside class="side-panel border-accent">
-                <h1 class="toc-title">Zuletzt bearbeitet</h1>
+                <h1 class="toc-title">Last edited</h1>
                 {{ page.last_published_at|date:"d.m.Y, H:i" }}
                 {% if page.author_visible %}
-                    <i>von</i>
-                    {{ page.last_edited_by }}
+                <i>by</i>
+                {{ page.last_edited_by }}
                 {% endif %}
             </aside>
+
             <aside class="side-panel border-accent toc-container d-print-none">
-                <h1 class="toc-title">Inhaltsverzeichnis</h1>
+                <h1 class="toc-title">Table of Contents</h1>
                 {{ parsed_md.1 }}
             </aside>
+
             {% if page.attachments.all %}
-                <aside class="side-panel border-accent toc-container d-print-none">
-                    <h1 class="toc-title">Attachments</h1>
-                    <ul>
+            <aside class="side-panel border-accent toc-container d-print-none">
+                <h1 class="toc-title">Attachments</h1>
+                <ul>
                     {% for attachment in page.attachments.all %}
-                        <li>
-                            <a href="{{ attachment.url }}">{{ attachment.title }}</a>
-                        </li>
+                    <li>
+                        <a href="{{ attachment.url }}">{{ attachment.title }}</a>
+                    </li>
                     {% endfor %}
-                    </ul>
-                </aside>
+                </ul>
+            </aside>
             {% endif %}
         </div>
     </div>
