--- a/myhpi/templates/base.html
+++ b/myhpi/templates/base.html
@@ -52,6 +52,12 @@
                         role="button">
                         {% bs_icon 'search' size='1.4em' %}
                     </a>
+                    <a id="nav-mobile-toggle" class="nav-link d-xl-none" href="#nav-item-container-root"
+                        onclick="toggleMobileNavbar(event)"
+                        role="button"
+                        aria-expanded="false" aria-controls="nav-item-container-root">
+                        {% bs_icon 'list' size='1.4em' %}
+                    </a>
                     {% if user.is_authenticated %}
                     <a id="nav-user-toggle" class="nav-link" href="#nav-item-container-user"
                         onclick="toggleUserNavbar(event)"
@@ -61,16 +67,10 @@
                             {{ user.last_name }}</span>
                         {% bs_icon 'person-circle' size='1.4em' %}
                     </a>
-                    <a id="nav-mobile-toggle" class="nav-link d-xl-none" href="#nav-item-container-root"
-                        onclick="toggleMobileNavbar(event)"
-                        role="button"
-                        aria-expanded="false" aria-controls="nav-item-container-root">
-                        {% bs_icon 'list' size='1.4em' %}
-                    </a>
                     {% else %}
                     <a id="nav-user-toggle" class="nav-link"
                         href="{% url 'oidc_authentication_init' %}{% if 'next' in request.GET %}?next={{ request.GET.next }}{% endif %}">
-                        <span class="d-none d-lg-inline-block">{% translate "Sign in" %}</span>
+                        <span class="d-none d-md-inline-block">{% translate "Sign in" %}</span>
                         {% bs_icon 'box-arrow-in-right' size='1.4em' %}
                     </a>
                     {% endif %}
