--- a/myhpi/templates/login.html
+++ b/myhpi/templates/login.html
@@ -8,7 +8,7 @@
 
 {% block content %}
     {% if user.is_authenticated %}
-      <p>Current user: {{ user.email }}</p>
+      <p>{% translate "Current user:" %} {{ user.email }}</p>
       <form action="{% url 'oidc_logout' %}" method="post">
         {% csrf_token %}
         <input type="submit" value="logout">
