--- a/myhpi/core/templates/core/minutes.html
+++ b/myhpi/core/templates/core/minutes.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% load core_extras %}
 {% load minutes_tags %}
+{% load i18n %}
 
 {% block content %}
     <div class="row minutes-container">
@@ -13,19 +14,19 @@
             {{ parsed_md.0 }}
         </div>
         <div class="col-3 minutes-meta">
-            <h4>Date</h4>
+            <h4>{% translate "Date" %}</h4>
             <p>{{ page.date }}</p>
-            <h4>Moderator</h4>
+            <h4>{% translate "Moderator" %}</h4>
             <p>{{ page.moderator.get_full_name }}</p>
-            <h4>Minutes taker</h4>
+            <h4>{% translate "Minutes taker" %}</h4>
             <p>{{ page.author.get_full_name }}</p>
-            <h4>Participants</h4>
+            <h4>{% translate "Participants" %}</h4>
             <ul>
                 {% for participant in page.participants.all %}
                     <li>{{ participant.get_full_name }}</li>
                 {% endfor %}
             </ul>
-            <h4>Guests</h4>
+            <h4>{% translate "Guests" %}</h4>
             {% if page.guests %}
                 <ul>
                 {% for guest in page.guests %}
@@ -33,20 +34,20 @@
                 {% endfor %}
                 </ul>
             {% else %}
-                <i>No guests</i>
+                <i>{% translate "No guests" %}</i>
             {% endif %}
-            <h4>Labels</h4>
+            <h4>{% translate "Labels" %}</h4>
                 {%  if page.labels.all %}
                     <p>
                     {% include "core/label.html" with minutes=page %}
                     </p>
                     {% else %}
-                    <i>No labels</i>
+                    <i>{% translate "No labels"%}</i>
                 {% endif %}
-            <h4 class="d-print-none">Table of contents</h4>
+            <h4 class="d-print-none">{% translate "Table of contents" %}</h4>
             {{ parsed_md.1 }}
             {% if page.attachments.all %}
-                <h4 class="d-print-none">Attachments</h4>
+                <h4 class="d-print-none">{% translate "Attachments" %}</h4>
                 <ul>
                 {% for attachment in page.attachments.all %}
                     <li>
@@ -61,13 +62,13 @@
                 <div class="col-6">
                     {%  prev_minutes page as prev %}
                     {% if prev %}
-                        <a href="{{ prev.url }}">< Previous minutes</a>
+                        <a href="{{ prev.url }}">< {% translate "Previous minutes" %}</a>
                     {%  endif %}
                 </div>
                 <div class="col-6">
                     {%  next_minutes page as next %}
                     {% if next %}
-                        <a href="{{ next.url }}">Next minutes ></a>
+                        <a href="{{ next.url }}"> {% translate "Next minutes" %} ></a>
                     {%  endif %}
                 </div>
         {% endwith %}
