--- a/myhpi/core/templates/core/minutes_list.html
+++ b/myhpi/core/templates/core/minutes_list.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load wagtailcore_tags %}
+{% load i18n %}
 
 {% block content %}
 <h1>{{ page.title }}</h1>
@@ -11,7 +12,7 @@
                 <td><a href="{% pageurl minute %}">{{ minute.date|date:"d.m.Y" }}</a></td>
                 <td>
                     {% if not minute.live %}
-                        <span title="Draft" aria-hidden="true">⚠️</span>
+                        <span title={% translate "Draft" %} aria-hidden="true">⚠️</span>
                     {% endif %}
                 </td>
                 <td>
