--- a/myhpi/templates/404.html
+++ b/myhpi/templates/404.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 {% block body_class %}template-404{% endblock %}
 
 {% block content %}
-    <h1>Page not found</h1>
+    <h1>{% translate "Page not found" %}</h1>
 
-    <h2>Sorry, this page could not be found.</h2>
+    <p>{% translate "The page you requested does not exist. Please check the URL or use the menu above to find your page." %}</p>
 {% endblock %}
