--- a/myhpi/templates/base.html
+++ b/myhpi/templates/base.html
@@ -4,6 +4,7 @@
 {% load core_extras %}
 {% load compile_static %}
 {% load bootstrap_icons %}
+{% load i18n %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -41,14 +42,14 @@
             <div class="page-content d-flex flex-grow-1 flex-xl-grow-0">
                 <div id="navbar-left" class="d-flex align-items-center">
                     <a class="nav-brand" href="{% pageurl root_page %}">
-                        <img src="{% static 'img/myHPI-Logo.svg' %}" class="h-100" alt="Zur Startseite">
+                        <img src="{% static 'img/myHPI-Logo.svg' %}" class="h-100" alt={% translate "To home page" %}>
                     </a>
                 </div>
                 <div id="nav-level-0" class="nav-level"></div>
                 <div id="navbar-right" class="flex-fill justify-content-end d-flex align-items-center">
                     <a id="nav-search-button" class="nav-link"
                         onclick="showSearchModal(event)"
-                        data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Strg+K"
+                        data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title={% translate "Ctrl+K" %}
                         role="button">
                         {% bs_icon 'search' size='1.4em' %}
                     </a>
@@ -69,7 +70,7 @@
                     {% else %}
                         <a id="nav-user-toggle" class="nav-link" class="nav-link"
                            href="{% url 'oidc_authentication_init' %}{% if 'next' in request.GET %}?next={{ request.GET.next }}{% endif %}">
-                            Anmelden
+                            {% translate "Sign in" %}
                             {% bs_icon 'box-arrow-in-right' size='1.4em' %}
                         </a>
                     {% endif %}
@@ -89,14 +90,14 @@
                     <ul id="nav-item-container-user" class="nav-item-container collapse"
                         data-navbar-level="#nav-level-0">
                         {% if user.groups.all.exists %}
-                            <span class="nav-link pe-none" id="navbar-groups-header"><i>Deine Gruppen:</i></span>
+                            <span class="nav-link pe-none" id="navbar-groups-header"><i>{% translate "Your groups:" %}</i></span>
                             {% for group in user.groups.all %}
                                 <li class="nav-link pe-none nav-link-extra-indent">{{ group }}</li>
                                 {% endfor %}
                             <li class="dropdown-divider"></li>
                         {% endif %}
                         <li class="nav-item">
-                            <a class='nav-link' href="#" id="logout-link">Abmelden</a>
+                            <a class='nav-link' href="#" id="logout-link">{% trans "Sign out" %}</a>
                             <form action="{% url 'oidc_logout' %}" method="post" id="logout-form">
                                 {% csrf_token %}
                             </form>
@@ -146,9 +147,9 @@
                 <div class="modal-body">
                     <form id="searchForm" class="d-flex align-items-center"
                         action="{% url 'search' %}">
-                        <input id="searchInput" type="search" class="form-control me-3 " placeholder="Suchen..."
+                        <input id="searchInput" type="search" class="form-control me-3 " placeholder={%  translate "Search..." %}
                             aria-label="Suche" name="query">
-                        <button type="submit" class="btn btn-primary" aria-label="Suche starten"
+                        <button type="submit" class="btn btn-primary" aria-label={%  translate "Start search" %}
                             data-bs-toggle="tooltip" data-bs-placement="bottom"
                             data-bs-title="Enter">{% bs_icon 'search' size='1.4em' extra_classes="text-light" %}</button>
                     </form>
