--- a/myhpi/core/templates/core/information_page.html
+++ b/myhpi/core/templates/core/information_page.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load core_extras %}
 {% load bootstrap_icons %}
+{% load i18n %}
 
 {% block content %}
 {% with page.body|markdown as parsed_md %}
@@ -24,7 +25,7 @@
     <div class="col-lg-3">
         <div class="side-panel-container">
             <aside class="side-panel border-accent">
-                <h1 class="toc-title">Last edited</h1>
+                <h1 class="toc-title">{% translate "Last edited" %}</h1>
                 {{ page.last_published_at|date:"d.m.Y, H:i" }}
                 {% if page.author_visible %}
                 <i>by</i>
@@ -33,13 +34,13 @@
             </aside>
 
             <aside class="side-panel border-accent toc-container d-print-none">
-                <h1 class="toc-title">Table of Contents</h1>
+                <h1 class="toc-title">{% translate "Table of contents" %}</h1>
                 {{ parsed_md.1 }}
             </aside>
 
             {% if page.attachments.all %}
             <aside class="side-panel border-accent toc-container d-print-none">
-                <h1 class="toc-title">Attachments</h1>
+                <h1 class="toc-title">{% translate "Attachments" %}</h1>
                 <ul>
                     {% for attachment in page.attachments.all %}
                     <li>
