feat: move footer to bottom of pages

--- a/myhpi/static/scss/myHPI.scss
+++ b/myhpi/static/scss/myHPI.scss
@@ -76,6 +76,16 @@ p {
     text-align: justify;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+#page {
+    flex: 1 0 auto;
+}
+
 .page {
     margin: auto;
 }
