--- a/myhpi/templates/base.html
+++ b/myhpi/templates/base.html
@@ -5,6 +5,7 @@
 {% load compile_static %}
 {% load bootstrap_icons %}
 {% load i18n %}
+{% load cache %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -79,7 +80,10 @@
         </div>
         <div class="navbar-bottom d-flex">
             <div class="navbar-bottom-content page-content d-flex flex-column flex-xl-row flex-grow-1 flex-xl-grow-0">
-                {% build_nav_level_for root_page %}
+
+                {% cache 500 menu request.user.id %} <!-- Check for anonymous user -->
+                    {% build_nav_level_for root_page %}
+                {% endcache %}
 
                 <!-- For navbar desktop mode: Wrappers for sub level containers of root level in navbar -->
                 <div id="nav-level-1" class="nav-level"></div>
