add language chooser in footer

--- a/myhpi/templates/base.html
+++ b/myhpi/templates/base.html
@@ -165,7 +165,7 @@
         </div>
     </div>
 
-    {% insert_footer %}
+    {% insert_footer page %}
 
     {# Global javascript #}
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
