--- a/myhpi/templates/footer.html
+++ b/myhpi/templates/footer.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 {% load core_extras %}
 
 <footer class="footer-myhpi container-lg page text-light">
@@ -9,5 +10,11 @@
       {% endwith %}
     </div>
     {% endfor %}
+    <div class="footer-category">
+      <h2>{% translate "Language" %}</h2>
+        {% for translation in page.get_translations %}
+            <a href="{{ translation.url }}">{{ translation.locale }}</a>
+        {% endfor %}
+    </div>
   </div>
 </footer>
