--- a/myhpi/core/templates/core/minutes_list.html
+++ b/myhpi/core/templates/core/minutes_list.html
@@ -18,7 +18,7 @@
                 <td>
                     {% include "core/label.html" with minutes=minute %}
                 </td>
-                <td><a href="{% pageurl minute %}">{{ minute.title }}</a></td>
+                <td><a href="{% if minute.live %}{% pageurl minute %}{% else %}{% url "wagtailadmin_pages:view_draft" minute.id %}{% endif %}">{{ minute.title }}</a></td>
                 <td>
                     {% if minute.attachments.count > 0 %}
                         <span class="text-gray" data-toggle="tooltip" data-placement="left" data-container="body" title="{{ minute.attachments.all|join:', ' }}">
