Add page visibility side panel to information pages

--- a/myhpi/core/templates/core/information_page.html
+++ b/myhpi/core/templates/core/information_page.html
@@ -29,6 +29,12 @@
                     {{ page.last_edited_by }}
                 {% endif %}
             </aside>
+            {% if perms.wagtail.edit_page %}
+                <aside class="side-panel border-accent toc-container d-print-none">
+                    <h1 class="toc-title">{% translate "Visibility" %}</h1>
+                    {{ page.visible_for.all|join:", " }}
+                </aside>
+            {% endif %}
             <aside class="side-panel border-accent toc-container d-print-none">
                 <h1 class="toc-title">{% translate "Table of contents" %}</h1>
                 {{ parsed_md.1 }}
